--- a/light.yml
+++ b/light.yml
@@ -406,7 +406,7 @@ action:
               - conditions: '{{ states(light) == "on" }} }}'
                 sequence:
                   - choose:
-                 
+
                       - conditions: '{{ (state_attr(light,"brightness") <= max_brightness) and (state_attr(light,"brightness") > (3 * (max_brightness / 4))) }}'
                         sequence:
                           service: light.turn_on
@@ -414,14 +414,22 @@ action:
                             brightness: '{{ 3 * (max_brightness / 4) }}'
                             transition: '{{ light_transition / 1000 }}'
                             entity_id: !input light
-                            
-                      - conditions: '{{ state_attr(light,"brightness") > (2 * (max_brightness / 4)) and  state_attr(light,"brightness") <= (3 * (max_brightness / 4))}}'
+
+                      - conditions: '{{ (state_attr(light,"brightness") > (max_brightness / 2)) and  (state_attr(light,"brightness") <= (3 * (max_brightness / 4)))}}'
                         sequence:
                           service: light.turn_on
                           data:
                             brightness: '{{ max_brightness / 2 }}'
                             transition: '{{ light_transition / 1000 }}'
                             entity_id: !input light
+                            
+                      - conditions: '{{ (state_attr(light,"brightness") > (max_brightness / 4)) and  (state_attr(light,"brightness") <= (max_brightness / 2))}}'
+                        sequence:
+                          service: light.turn_on
+                          data:
+                            brightness: '{{ max_brightness / 2 }}'
+                            transition: '{{ light_transition / 1000 }}'
+                            entity_id: !input light      
 #              - conditions: '{{ states(light) == "on" and state_attr(light,"brightness") <= (max_brightness / 2) + 5 and state_attr(light,"brightness") > (max_brightness / 4) }}'
 #                sequence:
 #                  service: light.turn_on
